--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         當您使用 "Live Server" 並準備好您的檔案時，請將 src 改回 "Mini_Robocon_Zero.glb"
                     -->
                     <model-viewer 
-                        src="https://modelviewer.dev/shared-assets/models/NeilArmstrong.glb" 
+                        src="Mini_Robocon_Zero.glb" 
                         alt="Mini Robocon Robot" 
                         auto-rotate 
                         camera-controls 
@@ -460,3 +460,4 @@
     </script>
 </body>
 </html>
+
