--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>工程作品集 | 學生姓名</title>
+    <title>Zero Wong</title>
     
     <!-- 引入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -22,10 +22,11 @@
         model-viewer {
             width: 100%;
             height: 400px;
-            background-color: #d1d5db; /* 修改：加深背景灰色 (Gray-300) */
+            /* 背景改回淺灰 */
+            background-color: #f3f4f6; 
             border-radius: 0.5rem;
             --poster-color: transparent;
-            /* 將模型顯示為灰階，模仿 CAD 圖效果 */
+            /* 保持灰階，讓模型看起來像金屬或工程圖 */
             filter: grayscale(100%);
         }
 
@@ -202,10 +203,13 @@
                             <span class="text-xs text-gray-500 bg-gray-100 px-2 py-1 rounded">可互動：請嘗試旋轉</span>
                         </div>
                         
-                        <!-- RoboMaster 模型 -->
+                        <!-- RoboMaster 模型 
+                             exposure="0.6" 用於壓低亮度，配合 grayscale(100%) 形成深灰效果 
+                        -->
                         <model-viewer 
-                            src="Mini_Robocon_Zero.glb" 
+                            src="https://modelviewer.dev/shared-assets/models/RobotExpressive.glb" 
                             alt="RoboMaster 供彈機構"
+                            exposure="0.6"
                             auto-rotate 
                             camera-controls
                             touch-action="pan-y"
@@ -239,7 +243,7 @@
                     <h3 class="text-xl font-bold mb-4">機械人全貌</h3>
                     <div class="w-full aspect-[16/9] bg-gray-200 rounded-lg overflow-hidden relative">
                         <!-- 請替換 src 為您的機械人照片 -->
-                        <img src="https://images.unsplash.com/photo-1563206767-5b1d972b9fb6?auto=format&fit=crop&q=80" alt="Mini Robocon 機械人全貌" class="object-cover w-full h-full hover:scale-105 transition duration-500">
+                        <img src="Assests\mini_robocon\whole.jpg" alt="Mini Robocon 機械人全貌" class="object-cover w-full h-full hover:scale-105 transition duration-500">
                         <div class="absolute bottom-4 left-4 bg-black/70 text-white px-4 py-2 rounded-lg text-sm">
                             比賽任務：顏色球分類與精準投射
                         </div>
@@ -260,16 +264,11 @@
                     </div>
 
                     <!-- 3D Viewer 設定 -->
-                    <!-- 
-                        重要：
-                        為了讓此處的預覽正常顯示，我暫時將 src 改為一個線上模型。
-                        當您使用 "Live Server" 並準備好您的檔案時，請將 src 改回 "Mini_Robocon_Zero.glb"
-                    -->
-                    <!-- 修改：加入 orientation="90deg 0deg 0deg" 讓模型繞 X 軸轉 90 度 -->
                     <model-viewer 
-                        src="https://modelviewer.dev/shared-assets/models/NeilArmstrong.glb" 
+                        src="Assests\mini_robocon\Mini_Robocon_Zero.glb" 
                         alt="Mini Robocon Robot" 
                         orientation="90deg 0deg 0deg"
+                        exposure="0.6"
                         auto-rotate 
                         camera-controls 
                         touch-action="pan-y" 
@@ -301,7 +300,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                         <div class="bg-white p-4 rounded-xl shadow-sm border border-gray-100">
                             <div class="aspect-square bg-gray-100 rounded-lg overflow-hidden mb-3 relative group">
-                                <img src="https://media.giphy.com/media/3o7abAHdYvZdBNnGZq/giphy.gif" alt="機械臂運作 GIF" class="object-cover w-full h-full">
+                                <img src="Assests\mini_robocon\load_1.gif" alt="機械臂運作 GIF" class="object-cover w-full h-full">
                                 <div class="absolute inset-0 bg-black/30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
                                     <span class="text-white font-bold">夾取機構測試</span>
                                 </div>
@@ -311,7 +310,7 @@
                         </div>
                         <div class="bg-white p-4 rounded-xl shadow-sm border border-gray-100">
                             <div class="aspect-square bg-gray-100 rounded-lg overflow-hidden mb-3 relative group">
-                                <img src="https://media.giphy.com/media/l0HlHFRbmaZtBRhXG/giphy.gif" alt="底盤移動 GIF" class="object-cover w-full h-full">
+                                <img src="Assests\mini_robocon\load_2.gif" alt="底盤移動 GIF" class="object-cover w-full h-full">
                                 <div class="absolute inset-0 bg-black/30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
                                     <span class="text-white font-bold">全向移動測試</span>
                                 </div>
@@ -321,7 +320,7 @@
                         </div>
                         <div class="bg-white p-4 rounded-xl shadow-sm border border-gray-100">
                             <div class="aspect-square bg-gray-100 rounded-lg overflow-hidden mb-3 relative group">
-                                <img src="https://media.giphy.com/media/3o7TKtdrYr0dYdbcTM/giphy.gif" alt="投射機構 GIF" class="object-cover w-full h-full">
+                                <img src="Assests\mini_robocon\take.gif" alt="投射機構 GIF" class="object-cover w-full h-full">
                                 <div class="absolute inset-0 bg-black/30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
                                     <span class="text-white font-bold">摩擦輪發射</span>
                                 </div>
@@ -350,14 +349,15 @@
                         <h3 class="font-bold text-lg">機械手臂夾爪</h3>
                         <p class="text-xs text-gray-500">工具：Fusion 360</p>
                     </div>
-                    <!-- 修改：統一背景顏色為 #d1d5db -->
+                    <!-- exposure="0.6" -->
                     <model-viewer 
                         src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" 
                         alt="機械手臂"
+                        exposure="0.6"
                         auto-rotate 
                         camera-controls 
                         shadow-intensity="1"
-                        style="height: 300px; width: 100%; background-color: #d1d5db;">
+                        style="height: 300px; width: 100%; background-color: #f3f4f6;">
                     </model-viewer>
                     <div class="p-4">
                         <p class="text-gray-600 text-sm">
@@ -372,13 +372,14 @@
                         <h3 class="font-bold text-lg">全向輪底盤 (Omni-wheel)</h3>
                         <p class="text-xs text-gray-500">工具：SolidWorks</p>
                     </div>
-                    <!-- 修改：統一背景顏色為 #d1d5db -->
+                    <!-- exposure="0.6" -->
                     <model-viewer 
                         src="https://modelviewer.dev/shared-assets/models/NeilArmstrong.glb" 
                         alt="全向輪底盤"
+                        exposure="0.6"
                         camera-controls 
                         shadow-intensity="1"
-                        style="height: 300px; width: 100%; background-color: #d1d5db;">
+                        style="height: 300px; width: 100%; background-color: #f3f4f6;">
                     </model-viewer>
                     <div class="p-4">
                         <p class="text-gray-600 text-sm">
@@ -393,13 +394,14 @@
                         <h3 class="font-bold text-lg">Arduino 智能小車外殼</h3>
                         <p class="text-xs text-gray-500">工具：Tinkercad / Cura</p>
                     </div>
-                    <!-- 修改：統一背景顏色為 #d1d5db -->
+                    <!-- exposure="0.6" -->
                     <model-viewer 
                         src="https://modelviewer.dev/shared-assets/models/AlphaBlendModeTest.glb" 
                         alt="外殼設計"
+                        exposure="0.6"
                         camera-controls 
                         shadow-intensity="1"
-                        style="height: 300px; width: 100%; background-color: #d1d5db;">
+                        style="height: 300px; width: 100%; background-color: #f3f4f6;">
                     </model-viewer>
                     <div class="p-4">
                         <p class="text-gray-600 text-sm">
