--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     </div>
                     <!-- exposure="0.6" -->
                     <model-viewer 
-                        src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" 
+                        src="Assests\rm\rm.glb" 
                         alt="機械手臂"
                         exposure="0.6"
                         auto-rotate 
@@ -467,3 +467,4 @@
     </script>
 </body>
 </html>
+
