--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                              exposure="0.6" 用於壓低亮度，配合 grayscale(100%) 形成深灰效果 
                         -->
                         <model-viewer 
-                            src="https://modelviewer.dev/shared-assets/models/RobotExpressive.glb" 
+                            src="Assests\rm\rm.glb" 
                             alt="RoboMaster 供彈機構"
                             exposure="0.6"
                             auto-rotate 
@@ -467,5 +467,6 @@
     </script>
 </body>
 </html>
+
 
 
